--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
+DateTime==4.3
+keyboard==0.13.5
 PyAudio==0.2.11
 PyQt5==5.15.4
 PyQt5-Qt5==5.15.2
 PyQt5-sip==12.8.1
+pytz==2021.1
+simpleaudio==1.0.4
+zope.interface==5.4.0
